# Inspection-Copilot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GOALS.md  Makefile  PRD.md  README.md  SPRINTS.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/app/: main.py  seed.py
backend/app/database/: __init__.py  connection.py  dynamodb_backend.py  inspection_queries.py  plan_queries.py  profile_queries.py  queries.py  report_queries.py  schema.py  seed_data.py  seed_queries.py  session_queries.py  setup.py
backend/app/routes/: admin.py  ai.py  debug.py  evidence.py  profiles.py  sessions.py  uploads.py  vehicles.py  voice.py
backend/app/services/: ai_stub.py  engine_check.py  report_generator.py
backend/app/storage/: __init__.py  s3_store.py
backend/app/voice/: __init__.py  config.py  prompts.py  realtime_bot.py  tools.py  webrtc.py
backend/tests/: test_api_shell.py  test_aws_storage_contracts.py  test_database_seed.py  test_debug_inspection_flow_log.py  test_inspection_loop.py  test_plan_generator.py  test_reports.py  test_vehicle_lookup.py  test_voice_runtime.py
deploy/: docker-compose.yml
deploy/aws/: deploy-backend.sh
docs/: DEPLOYMENT.md
docs/superpowers/plans/: 2026-05-29-aws-ec2-backend-deployment.md
mobile/: .gitignore  ASSET_CREDITS.md  Makefile  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  index.tsx  model-test.tsx  onboarding.tsx  reports.tsx  vehicle-found.tsx
mobile/plugins/: withRealtimeFrameCapture.js
mobile/scripts/: patch-rn-deps.mjs
(+75 files in other folders)
