[project]
name = "cars24-jockey-copilot-backend"
version = "0.1.0"
description = "FastAPI backend for the Cars24 Jockey Copilot hackathon prototype."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "pipecat-ai[openai,runner,webrtc]>=1.2.1",
  "pydantic==2.10.6",
  "python-multipart==0.0.29",
  "python-dotenv==1.2.2",
  "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
